perf: tune JVM GC per service via JAVA_TOOL_OPTIONS
ZGC for latency-critical services (sub-ms GC pauses):
  - api-gateway
  - order-service
  - payment-service

G1GC for throughput-oriented services (200ms pause target):
  - product, cart, inventory, notification, search, user, media, promotion

Applied to docker-compose.prod.yml (via x-g1gc-jvm / x-zgc-jvm YAML anchors)
and to every k8s/base/backend/*.yaml + k8s/base/infra/api-gateway.yaml
Deployment env block.

The G1GC flag set (region-size 16m, IHOP 70, string dedup, parallel ref proc)
keeps mixed GCs short and trims heap on JSON-heavy payloads. ZGenerational is
pinned explicitly so JDK base-image upgrades don't silently change behaviour.

Documented the rollout + trade-off in SCALING_AND_IMPROVEMENTS.md §2.4.

Refs: docs/SCALING_AND_IMPROVEMENTS.md §2.4